--- a/Javascript/web.css
+++ b/Javascript/web.css
@@ -1,4 +1,56 @@
 body{
     font-family: 'Courier New', Courier, monospace;
-    font-size: larger;
+    font-size: 2em;
+}
+button{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1em;
+}
+input{
+    font-size: 0.75em;
+}
+select{
+    font-size: 0.75em;
+}
+option{
+    font-size: 0.75em;
+}
+#checkbox{
+    font-size: 0.75em;
+}
+#a7{
+    display: block;
+    font-size: 10em;
+    text-align: center;
+    font-weight: bold;
+}
+#a7_container{
+    text-align: center;
+}
+#a7_container button{
+    background-color: gray;
+    color: aqua;
+    display: inline-block;
+    font-size: 2em;
+    text-align: center;
+    border-radius: 15px;
+}
+
+#a9{
+    display: block;
+    text-align: center;
+}
+#a9 label{
+    display: block;
+    font-size: 10em;
+    text-align: center;
+    font-weight: bold;
+}
+#a9 button{
+    background-color: gray;
+    color: aqua;
+    display: inline-block;
+    font-size: 2em;
+    text-align: center;
+    border-radius: 15px;
 }
