--- a/Javascript/web.css
+++ b/Javascript/web.css
@@ -2,9 +2,13 @@ body{
     font-family: 'Courier New', Courier, monospace;
     font-size: 2em;
 }
+image{
+    width: 200px;
+}
 button{
     font-family: 'Courier New', Courier, monospace;
     font-size: 1em;
+    cursor: pointer;
 }
 input{
     font-size: 0.75em;
@@ -14,6 +18,14 @@ select{
 }
 option{
     font-size: 0.75em;
+}
+form{
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px hsl(0, 3%, 16%);
+    text-align: center;
+    max-width: 600px;
+    margin: auto;
 }
 #checkbox{
     font-size: 0.75em;
@@ -53,4 +65,38 @@ option{
     font-size: 2em;
     text-align: center;
     border-radius: 15px;
+}
+#a24_number{
+    border: solid;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1.3em;
+}
+#a24_form{
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px hsl(0, 3%, 16%);
+    text-align: center;
+    max-width: 600px;
+    margin: auto;
+}
+#dice_roller{
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px hsl(0, 3%, 16%);
+    text-align: center;
+    max-width: 100%;
+    margin: auto;
+}
+#dice_input{
+    border: solid;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1.2em;
+    margin: 15px;
+}
+#dice_image img{
+    width: 250px;
+    height: auto;
+    margin: 10px;
 }
